modified:   apps/api/src/api/auth/auth.service.ts 	modified:   apps/api/src/api/auth/dto/auth-response.dto.ts 	modified:   apps/api/src/api/users/dto/create-user.dto.ts 	modified:   apps/api/src/api/users/users.api.service.ts 	modified:   apps/user-control-panel/src/app/contexts/AuthContext.tsx 	modified:   apps/user-control-panel/src/app/contexts/signUp/SignUpContext.tsx 	modified:   libs/api-client/openapi.json 	modified:   libs/api-client/src/lib/api-client.ts 	modified:   libs/api-validator/src/lib/schemas/user.ts 	new file:   libs/models/prisma/migrations/20260811162408_add_user_country/migration.sql 	modified:   libs/models/seeds/initial.ts
